--- a/client/myBoard/userNote.html
+++ b/client/myBoard/userNote.html
@@ -17,7 +17,7 @@
                     for="title">Title</label>
                     <div class="col-sm-10">
                       <input type="email" class="form-control" 
-                      id="inputEmail3" placeholder="Title"/>
+                      id="title" placeholder="Title"/>
                     </div>
                   </div>
                   <div class="form-group">
@@ -31,8 +31,8 @@
                     <label class="col-sm-2 control-label"
                     for="content">Keywords</label>
                     <div class="col-sm-10">
-                      <input type="password" class="form-control"
-                      id="inputPassword3" placeholder="Keywords"/>
+                      <input type="keywords" class="form-control"
+                      id="keywords" placeholder="Keywords"/>
                     </div>
                   </div>
                 </form>
