too many changes to explain.  trying to fix when it broke in adding subscribe and publish

--- a/client/navBar/navbar.html
+++ b/client/navBar/navbar.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
                 {{#if currentUser}} 
-                <li><a href="userPage">userPage</a></li>
+                <li><a href="newNote">newNote</a></li>
                 <li><a href="myBoard">myBoard</a></li>
                 {{/if}}
             </ul>
@@ -25,7 +25,7 @@
                         </div>
                     </form>
                 </li>
-                <li><a href="home" class="logout">Logout</a></li>
+                <li><a href="login" class="logout">Logout</a></li>
                 {{else}}
                 <li><a href="login">Login</a></li>
                 {{/if}}
