--- a/client/home/home.html
+++ b/client/home/home.html
@@ -1,9 +1,7 @@
 <template name="home">
-	
 	<nav>
-	{{ > yield "navbar" }}
+		{{ > yield "navBar" }}
 	</nav>
-	
 	<div class="container-fluid">
 		<div class="row">
 			<div class="home-welcome col-sm-12">
