--- a/client/home/login.html
+++ b/client/home/login.html
@@ -1,24 +1,23 @@
 <template name="login">
     <nav>
-        {{ > yield "navbar" }}
+        {{ > yield "navBar" }}
     </nav>
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
             <form class="login-form">
-                        <h3>Login</h3>
-                        <div class="form-group col-lg-12">
-                            <label>Email</label>
-                            <input type="email"  class="form-control" id="email" value="">
-                        </div>
-                        <div class="form-group col-lg-12">
-                            <label>Password</label>
-                            <input type="password" name="" class="form-control" id="password" value="">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Login</button>
-                        <br>
-                        <a href="/register">Click Here if You Need to Register</a>
+                <h3>Login</h3>
+                <div class="form-group col-lg-12">
+                    <label>Email</label>
+                    <input type="email"  class="form-control" id="email" value="">
+                </div>
+                <div class="form-group col-lg-12">
+                    <label>Password</label>
+                    <input type="password" name="" class="form-control" id="password" value="">
+                </div>
+                <button type="submit" class="btn btn-primary">Login</button>
+                <br>
+                <a href="/register">Click Here if You Need to Register</a>
             </form>
         </div>
     </div>
-
 </template>
