--- a/client/home/register.html
+++ b/client/home/register.html
@@ -1,31 +1,20 @@
 <template name="register">
     <nav>
-        {{ > yield "navbar" }}
+        {{ > yield "navBar" }}
     </nav>
     <div class="row">
         <div class="col-sm-6 col-sm-offset-3">
             <form class="register-form">
-                        <h3>Registration</h3>
-                        <div class="form-group col-lg-12">
-                            <label>Email:</label>
-                            <input type="email"  class="form-control" id="email" value="">
-                        </div>
-
-                        <div class="form-group col-lg-6">
-                            <label>Name:</label>
-                            <input type="text" name="" class="form-control" id="firstname" value="">
-                        </div>
-
-                        <div class="form-group col-lg-6">
-                            <label>Last Name:</label>
-                            <input type="text" name="" class="form-control" id="lastname" value="">
-                        </div>
-
-                        <div class="form-group col-lg-12">
-                            <label>Password:</label>
-                            <input type="password" name="" class="form-control" id="password" value="">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Register</button>
+                <h3>Registration</h3>
+                <div class="form-group col-lg-12">
+                    <label>Email</label>
+                    <input type="email"  class="form-control" id="email" value="">
+                </div>
+                <div class="form-group col-lg-12">
+                    <label>Password</label>
+                    <input type="password" name="" class="form-control" id="password" value="">
+                </div>
+                <button type="submit" class="btn btn-primary">Register</button>
             </form>
         </div>
     </div>
