logout and adding to the database now works

--- a/client/home/login.html
+++ b/client/home/login.html
@@ -14,9 +14,9 @@
                     <label>Password</label>
                     <input type="password" name="" class="form-control" id="password" value="">
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" id="login-form" class="btn btn-primary">Login</button>
                 <br>
-                <a href="/register">Click Here if You Need to Register</a>
+                <a href="register">Click Here if You Need to Register</a>
             </form>
         </div>
     </div>
