--- a/client/myBoard/myNote.html
+++ b/client/myBoard/myNote.html
@@ -1,4 +1,4 @@
-<template name="userNote">
+<template name="myNote">
   <!-- Modal -->
   <div class="modal fade" id="myModal{{_id}}" role="dialog">
     <div class="modal-dialog">
