--- a/client/navBar/navbar.html
+++ b/client/navBar/navbar.html
@@ -25,7 +25,7 @@
                         </div>
                     </form>
                 </li>
-                <li><a href="login" class="logout">Logout</a></li>
+                <li><a href="home" name="logout" id="logout" class="logout">Logout</a></li>
                 {{else}}
                 <li><a href="login">Login</a></li>
                 {{/if}}
