--- a/client/home/register.html
+++ b/client/home/register.html
@@ -14,7 +14,7 @@
                     <label>Password</label>
                     <input type="password" name="" class="form-control" id="password" value="">
                 </div>
-                <button type="submit" class="btn btn-primary">Register</button>
+                <button type="submit" id="register-form" class="btn btn-primary">Register</button>
             </form>
         </div>
     </div>
