upload has been completws.

--- a/client/home/home.html
+++ b/client/home/home.html
@@ -2,10 +2,10 @@
 	<nav>
 		{{ > yield "navBar" }}
 	</nav>
-	<div class="container-fluid">
+	<div class="container-fluid main">
 		<div class="row">
-			<div class="home-welcome col-sm-12">
-				<h1> Welcome To myNotes </h1>	
+			<div class="center-block home container-fluid">
+				<h1> Welcome To myNotes </h1>
 			</div>
 		</div>
 	</div>
