--- a/client/home/register.html
+++ b/client/home/register.html
@@ -3,7 +3,7 @@
         {{ > yield "navBar" }}
     </nav>
     <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
+        <div class="col-sm-6 col-sm-offset-3 main">
             <form class="register-form">
                 <h3>Registration</h3>
                 <div class="form-group col-lg-12">
