--- a/client/myBoard/myNote.html
+++ b/client/myBoard/myNote.html
@@ -54,7 +54,7 @@
   </div>
 </div>
 
-<div class="col-md-3 col-sm-4 userNote" data-toggle="modal" data-target="#myModal{{_id}}">
+<div class="col-sm-3 userNote main" data-toggle="modal" data-target="#myModal{{_id}}">
   <div class="note">
     <h2>{{ Title }}</h2>
     <p>{{ Content }}</p>
