--- a/client/home/login.html
+++ b/client/home/login.html
@@ -2,7 +2,7 @@
     <nav>
         {{ > yield "navBar" }}
     </nav>
-    <div class="row">
+    <div class="row main">
         <div class="col-sm-6 col-sm-offset-3">
             <form class="login-form">
                 <h3>Login</h3>
