--- a/client/myBoard/newNote.html
+++ b/client/myBoard/newNote.html
@@ -3,7 +3,9 @@
 	<nav>
    {{ > yield "navBar" }}
  </nav>
- <div class="col-sm-6">
+ <div class=col-sm-3>
+ </div>
+ <div class="col-sm-6 main">
 
   <form class="form-horizontal" role="form">
     <div class="form-group">
