--- a/client/myBoard/myNote.html
+++ b/client/myBoard/myNote.html
@@ -8,45 +8,45 @@
           <div id="expand-profile" class="container-fluid">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <div class="row">
-              <div class="col-sm-6">
               <form class="form-horizontal" role="form">
-                  <div class="form-group">
-                    <label  class="col-sm-2 control-label"
-                    for="title">Title</label>
-                    <div class="col-sm-10">
-                      <input type="email" class="form-control" 
-                      id="title" placeholder="Title"/>
-                    </div>
+                <div class="form-group">
+                  <label  class="col-sm-4 control-label" for="title">Title</label>
+                  <div class="col-sm-8">
+                    <input type="email" class="form-control" id="title" placeholder={{title}}/>
                   </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label"
-                    for="content">Content</label>
-                    <div class="col-sm-10">
-                      <textarea class="form-control" rows="5" id="content" placeholder="content"></textarea>
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <label class="col-sm-2 control-label"
-                    for="content">Keywords</label>
-                    <div class="col-sm-10">
-                      <input type="keywords" class="form-control"
-                      id="keywords" placeholder="Keywords"/>
-                    </div>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-default"
-                    data-dismiss="modal">
-                    Share
-                  </button>
-                  <button type="button" class="btn btn-default">
-                    Save changes
-                  </button>
-                  <button type="button" class="btn btn-default">
-                    Delete
-                  </button>
                 </div>
-              </form>
-            </div>
+                <div class="form-group">
+                  <label class="col-sm-4 control-label" for="content">Content</label>
+                  <div class="col-sm-8">
+                    <textarea class="form-control" rows="5" id="content" placeholder="{{content}}"></textarea>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <label class="col-sm-4 control-label" for="keywords">Keywords</label>
+                  <div class="col-sm-8">
+                    <input type="keywords" class="form-control" id="keywords" placeholder="{{keywords}}">
+                  </div>
+                </div>
+                <div class="modal-footer">
+                 <div class="form-group">
+                  <label class="col-sm-4 control-label" for="share">Email</label>
+                  <div class="col-sm-8">
+                    <input type="share" class="form-control" id="share" placeholder="Email">
+                  </div>
+                </div>                   
+                <button type="button share" id="share" class="btn btn-default" data-dismiss="modal">
+                  Share
+                </button>
+              </div>
+              <div class="modal-footer">
+                <button type="button submit" id="submit" class="btn btn-default">
+                  Save changes
+                </button>
+                <button type="button delete" id="delete" class="btn btn-default">
+                  Delete
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
@@ -54,7 +54,7 @@
   </div>
 </div>
 
-<div class="col-sm-3 userNote main" data-toggle="modal" data-target="#myModal{{_id}}">
+<div class="col-sm-3 myNote main" data-toggle="modal" data-target="#myModal{{_id}}">
   <div class="note">
     <h2>{{ Title }}</h2>
     <p>{{ Content }}</p>
