--- a/client/myBoard/newNote.html
+++ b/client/myBoard/newNote.html
@@ -9,33 +9,30 @@
 
   <form class="form-horizontal" role="form">
     <div class="form-group">
-      <label  class="col-sm-2 control-label"
-      for="title">Title</label>
+      <label  class="col-sm-2 control-label" for="title">Title</label>
       <div class="col-sm-10">
-        <input class="form-control" 
-        id="title" placeholder="Title"/>
+      <input class="form-control" id="title" placeholder="Title"/>
       </div>
     </div>
     <div class="form-group">
       <label class="col-sm-2 control-label"
       for="content">Content</label>
       <div class="col-sm-10">
-      <textarea class="form-control" rows="5" id="content" placeholder="Content"></textarea>
+        <textarea class="form-control" rows="5" id="content" placeholder="Content"></textarea>
       </div>
     </div>
     <div class="form-group">
       <label class="col-sm-2 control-label"
       for="content">Keywords</label>
       <div class="col-sm-10">
-        <input type="keywords" class="form-control"
-        id="keywords" placeholder="Keywords"/>
+        <input type="keywords" class="form-control" id="keywords" placeholder="Keywords"/>
       </div>
     </div>
     <div class="modal-footer">
-    <button type="button submit" id="submit" class="btn btn-default">
-      Save changes
-    </button>
-  </div>
-</form>
+      <button type="button submit" id="submit" class="btn btn-default">
+        Save changes
+      </button>
+    </div>
+  </form>
 </div>
 </template>
