--- a/client/navBar/navbar.html
+++ b/client/navBar/navbar.html
@@ -6,30 +6,28 @@
             </button>
             <a class="navbar-brand" href="Home">myNotes</a>
         </div>
+        {{#if currentUser}} 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
+
             <ul class="nav navbar-nav">
-                {{#if currentUser}} 
                 <li><a href="newNote">newNote</a></li>
                 <li><a href="myBoard">myBoard</a></li>
-                {{/if}}
-            </ul>
-            <ul class="main-navbar-right nav navbar-nav">
-                {{#if currentUser}} 
-                <li>
-                    <form class="navbar-form" role="search">
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-                            <div class="input-group-btn">
-                                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-                            </div>
+                <li><form class="navbar-form" role="search">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" name="search-term" id="search-term">
+                        <div class="input-group-btn">
+                            <button class="btn btn-default" type="submit"><i>class="glyphicon glyphicon-search"</i></button>
                         </div>
-                    </form>
-                </li>
-                <li><a href="home" name="logout" id="logout" class="logout">Logout</a></li>
-                {{else}}
-                <li><a href="login">Login</a></li>
-                {{/if}}
-            </ul>
-        </div>
+                    </div>
+                </form>
+            </li>
+        </ul>
     </div>
+    <div class="nav navbar-nav navbar-right">
+        <li><a href="home" name="logout" id="logout" class="logout">Logout</a></li>
+        {{else}}
+        <li><a href="login">Login</a></li>
+        {{/if}}
+    </div>
+</div>
 </template>
