share works and there were changes in css

--- a/client/myBoard/myBoard.html
+++ b/client/myBoard/myBoard.html
@@ -3,7 +3,7 @@
    {{ > yield "navBar" }}
  </nav>
 
- <div id="image-cascade" class="container-fluid center-block main">
+ <div id="image-cascade main" class="container-fluid center-block main">
   <div class="row">
       {{#each notes}}
        {{>myNote}}
