more debugs and style additions

--- a/client/home/register.html
+++ b/client/home/register.html
@@ -2,7 +2,7 @@
     <nav>
         {{ > yield "navBar" }}
     </nav>
-    <div class="row">
+    <div class="row main">
         <div class="col-sm-6 col-sm-offset-3 main">
             <form class="register-form">
                 <h3>Registration</h3>
