--- a/client/navBar/navbar.html
+++ b/client/navBar/navbar.html
@@ -1,37 +1,41 @@
 <template name="navBar" data-offset="60">
-        <div class="navbar-default">
+    <div class="navbar-default">
         <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="home">myNotes</a>
-        </div>
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="home">myNotes</a>
+            </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        {{#if currentUser}}
+                {{#if currentUser}}
                 <ul class="nav navbar-nav navbar-left">
                     <li><a href="newNote">newNote</a></li>
                     <li><a href="myBoard">myBoard</a></li>
+                    <li>
+                        <form class="navbar-form" role="search">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Search" name="search-term" id="search-term">
+                                <div class="input-group-btn">
+                                    <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                                </div>
+                            </div>
+                        </form>
+                    </li>
                 </ul>   
-            <form class="navbar-form navbar-left" id="search" role="search">
-                <div class="form-group">
-                  <input type="text" id="searchValue" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-default">Submit</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="{{pathFor route='login'}}" class = "logout">Log Out</a></li>
-            </ul>
-        {{else}}
-        <!-- Collect the nav links, forms, and other content for toggling -->
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="login">Login</a></li>
-            </ul>
-        {{/if}}
+                <ul class="nav navbar-nav navbar-right">
+                <li><a href="home" class = "logout">Log Out</a></li>
+                </ul>
+                {{else}}
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="login">Login</a></li>
+                </ul>
+                {{/if}}
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </div>
