--- a/client/myBoard/newNote.html
+++ b/client/myBoard/newNote.html
@@ -3,6 +3,7 @@
 	<nav>
    {{ > yield "navBar" }}
  </nav>
+ <div class="newNote">
  <div class="col-sm-3">
  </div>
  <div class="col-sm-6 main">
@@ -33,6 +34,7 @@
       </button>
     </div>
   </form>
+</div>
 </div>
 
 </template>
