--- a/client/myBoard/myNote.html
+++ b/client/myBoard/myNote.html
@@ -12,19 +12,19 @@
               <form class="form-horizontal" role="form">
                 <div class="form-group">
                 <br><br>
-                  <label  class="col-sm-4 control-label" for="title">Title</label>
+                  <label  class="col-sm-4 control-label">Title</label>
                   <div class="col-sm-8">
                     <input class="form-control" id="title" value="{{title}}"/>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="col-sm-4 control-label" for="content">Content</label>
+                  <label class="col-sm-4 control-label">Content</label>
                   <div class="col-sm-8">
                     <textarea class="form-control" rows="5" id="content" value="{{content}}"></textarea>
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="col-sm-4 control-label" for="keywords">Keywords</label>
+                  <label class="col-sm-4 control-label">Keywords</label>
                   <div class="col-sm-8">
                     <input type="keywords" class="form-control" id="keywords" value="{{keywords}}">
                   </div>
@@ -38,9 +38,7 @@
                   </button>
                   <br>
                   </div>
-              </form>
 
-              <form class="form-horizontal" role="form">
                <div class="form-group">
                <br>
                 <label class="col-sm-4 control-label" for="share">Share</label>
