--- a/client/myBoard/newNote.html
+++ b/client/myBoard/newNote.html
@@ -10,20 +10,19 @@
 
   <form class="form-horizontal" role="form">
     <div class="form-group">
-      <label  class="col-sm-2 control-label" for="title">Title</label>
+      <label  class="col-sm-2 control-label">Title</label>
       <div class="col-sm-10">
         <input class="form-control" id="title" placeholder="Title"/>
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label" for="content">Content</label>
+      <label class="col-sm-2 control-label">Content</label>
       <div class="col-sm-10">
         <textarea class="form-control" rows="5" id="content" placeholder="Content"></textarea>
       </div>
     </div>
     <div class="form-group">
-      <label class="col-sm-2 control-label"
-      for="content">Keywords</label>
+      <label class="col-sm-2 control-label">Keywords</label>
       <div class="col-sm-10">
         <input type="keywords" class="form-control" id="keywords" placeholder="Keywords">
       </div>
