more style modifications and debugging

--- a/client/myBoard/myBoard.html
+++ b/client/myBoard/myBoard.html
@@ -3,9 +3,9 @@
    {{ > yield "navBar" }}
  </nav>
 
-<div class="myBoard container">
+<div class="myBoard container center-block">
  <div class="container center-block">
- 	<div class="row center-block">
+ 	<div class="row">
  		{{#each notes}}
  		{{>myNote}}
  		{{/each}}
