--- a/client/navBar/navbar.html
+++ b/client/navBar/navbar.html
@@ -1,5 +1,5 @@
 <template name="navBar" data-offset="60">
-    <div class="navbar-default">
+    <div class="navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
